# retry_plus

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONDITIONS.md  LICENSE  README.md  README.rst  package.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
docs/source/: CONDITIONS.rst  README.rst  api_reference.rst  conf.py  index.rst
example/: asynchronous_function.py  combining_stop_and_wait_conditions.py  customizing_retry_conditions_and_wait_conditions.py  http_example.py  synchronous_function.py  using_the_retry_context_manager.py
retry/: __init__.py  conditions.py  retry.py
tests/: test_retry.py
