[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retry_plus"
version = "1.0.3"
description = "A generic retry package for Python"
readme = "README.md"
authors = [
    { name = "Talaat Magdy", email = "talaatmagdy75@gmail.com" }
]
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "pytest-asyncio",
]
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["."]
