[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retry_plus"
version = "1.0.5"
description = "A generic retry package for Python"
readme = "README.md"
authors = [
    { name = "Talaat Magdy", email = "talaatmagdy75@gmail.com" }
]
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []
requires-python = ">=3.6"

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]
docs = [
    "sphinx",
    "myst-parser",
    "readthedocs-sphinx-ext",
    "sphinx_rtd_theme"
]
