[metadata]
name = retry
version = 1.0.0
description = A generic retry package for Python
author = Talaat Magdy
author_email = talaatmagdy75@gmail.com
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pytest
    pytest-asyncio
python_requires = >=3.6

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    retry = retry:main

[options.extras_require]
dev =
    pytest
    pytest-asyncio

[options.test]
test_suite = tests
