[metadata]
name = retry_plus
version = 1.0.1
description = A generic retry package for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Talaat Magdy
author_email = talaatmagdy75@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pytest
    pytest-asyncio
python_requires = >=3.6

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    retry = retry:main

[options.extras_require]
dev =
    pytest
    pytest-asyncio

[tool:pytest]
testpaths = tests
